# matlabPybind11

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  condaEnv.yaml  condaEnv.yml  condaEnvLinux.yml  condaEnvMac.yml  condaEnvWin.yml  example.cpp  importModules.m  main.asv  main.m  pathSet.m  setPars.asv  setPars.m
src/armadillo/: CMakeLists.txt  armaBindings.cpp  armaEx.m  condaEnvLinux.yml  condaEnvWin.yml
src/cppFuncs/: bindings.cpp  funcs.hpp  solvers.cpp
src/data/cuboid/: Cover_cuboid_Patches_20_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat  Cover_cuboid_Patches_30_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat  Cover_cuboid_Patches_40_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat  Cover_cuboid_Patches_50_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat  Cover_cuboid_Patches_60_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat  Cover_cuboid_Patches_70_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat  Cover_cuboid_Patches_80_np0_20nLoc_56oversamp_3overlap_0.05ep_0.1.mat
src/data/diaphragm/: geom_prob3_nloc120_np120_ol035_H1_R1.mat
src/experiments/: RBFsolverConvExp.m  RBFsolverParExp.m  conGlobMatParExp.m
src/matlabFuncs/: RBFPUM.m  RBF_QR_diffmat_3D.m  RBF_QR_mat_3D.m  RBF_QR_precomp_3D.m  RBFsolver.asv  RBFsolver.m  Y.m  checkMemory.m  computeDifferror.m  computeGlobalOp.m  computeGlobalOp_Bunny.m  conGlobMat.asv  conGlobMat.m  conGlobMatPar.m  cylPUWeights.m  cylWeightRBF.m  getPtch.m  getPts.m  globPts2Loc.m  importModules.m  inHouseLegendre.m  isPars.m  legendre_modified.m  locPts2Ref.m  makeFEMRectangle.m  movePts.m  p_func.m  plotPtch.m  plotSolution.m  refineTriMesh.m  setPars.m  solveElasticity.m  testMemory.m  weights.m  xcdist.m
tests/: RBFsolverTest.m  computeDifferror.m  conGlobMatPerfTests.m  cppFuncsPerfTests.m  cppFuncsTest.asv  cppFuncsTest.m  cppFuncsTime.m  getPtchTest.m  plotElasticityError.m  setParsTest.m
